# langgraph-training

./: .env.example  Makefile  QUICK_START_TESTING.md  README.md  TESTING_SUMMARY.md  TEST_RESULTS.md  main.py  mcp_client_utils.py  my_mcp_server.py  pyproject.toml  pytest.ini
.github/workflows/: test.yml
config/: research_assistant.yaml
core/: __init__.py
core/agents/: __init__.py  base_agent.py  mixins.py
core/config/: __init__.py  settings.py  validators.py
core/graph/: __init__.py  builder.py  edges.py  nodes.py
core/state/: __init__.py  manager.py  validators.py
docs/: ARCHITECTURE.md
examples/: research_agent_refactored.py
mcp_server/: README.md  mcp_client_utils.py  mcp_server.py  start_server.sh
module0/: basics.py
module1/: __init__.py  agent.py  agent_memory.py  chain.py  router.py  simple_graph.py
module2/: custom_reducers.py  filter_messages.py  multiple_schema_input_output.py  multiple_schemas.py  reducers.py  state-schema.py  state_reducers_messages.py  summarization.py  summarization_with_external_memory.py  summary.py  trim_messages.py
module3/: breakpoints.py  dynamic_breakpoints.py  edit_state_human_feedback.py  streaming_interruption.py  time_travel.py
module4/: research_assistant.py
module4/model/: __init__.py  models.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: test_research_workflow.py
tests/fixtures/: __init__.py  test_helpers.py
tests/integration/: test_graphs.py  test_mcp_client.py
tests/unit/: test_base_agent.py  test_config.py  test_graph_builder.py  test_mixins.py  test_models.py  (+3 more)
